--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html, body, * {
+  font-family: "Times New Roman", Times, serif !important;
+}
 :root {
   font-family: "Times New Roman", Times, serif;
   line-height: 1.5;
